Validated Signup.html
Validated Signup.html

--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -18,7 +18,7 @@
 
         <!-- CSS -->
         {% block CSS %}
-        <link rel="stylesheet" type="text/css" href="{% static 'app/css/index.css' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static 'app/css/index.css' %}"/>cd
         {% endblock %}
 
         
@@ -114,7 +114,7 @@
         <section id="box" class="d-flex align-items-center">
         <div class="container position-relative">
           <div class="row icon-boxes">
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
               <div class="icon-box">
                 <div class="icon"><i class="fa fa-gift"></i></div>
                 <h4 class="title text-center"><a href="">Donate Footware</a></h4>
