--- a/RaisingMinds/users/templates/users/signup.html
+++ b/RaisingMinds/users/templates/users/signup.html
@@ -61,36 +61,29 @@
                 </div>
                 <h3 class="text-center mb-4">Sign Up</h3>
                 <form action="#" class="login-form" method="post">
-                {% csrf_token %}
-                <div class="form-group">
-                    <input type="text" class="form-control rounded-left" name="username" placeholder="Username" required>
-                </div>
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <input type="text" class="form-control rounded-left" name="username" placeholder="Username" required>
+                    </div>
 
-                <div class="form-group">
-                    <input type="email" class="form-control rounded-left" name="email" placeholder="Email" required>
-                </div>
-                <div class="form-group d-flex">
-                    <input type="password" class="form-control rounded-left" name="password1" placeholder="Password" required>
-                </div>
-                <div class="form-group d-flex">
-                    <input type="password" class="form-control rounded-left" name="password2" placeholder="Confirm Password" required>
-                </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control rounded-left" name="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-group d-flex">
+                        <input type="password" class="form-control rounded-left" name="password1" placeholder="Password" oninput="validatePassword()" required>
+                    </div>
+                    <div class="form-group d-flex">
+                        <input type="password" class="form-control rounded-left" name="password2" placeholder="Confirm Password" oninput="validatePasswordMatch()" oninput="validatePasswordMatch()" required>
+                    </div>
 
-                <div class="form-group">
-                    <button type="submit" class="form-control btn btn-primary rounded submit px-3">Sign Up</button>
-                </div>
-                <div class="text-center">
-                    <!-- <p>or</p> -->
-                    <p class="mt-2">Do you have an account? <a href="{% url 'login' %}"> Login here</p>
-                    </a></p>
-                </div>
-
-                <!-- Sign up with Google -->
-                <!-- <a href="#"> <button type="button"
-                    class="form-control btn btn-primary rounded submit px-3 ">
-                    <i class="fab fa-google"></i>Sign Up with Google
-                 </button>
-                </a> -->
+                    <div class="form-group">
+                        <button type="submit" class="form-control btn btn-primary rounded submit px-3">Sign Up</button>
+                    </div>
+                    <div id="passwordError" style="color: red;"></div>
+                    <div class="text-center">
+                        <p class="mt-2">Do you have an account? <a href="{% url 'login' %}"> Login here</p>
+                        </a></p>
+                    </div>
                 </form>
             </div>
             </div>
@@ -100,5 +93,45 @@
     <!-- end of signup form -->
       
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
+  <script>
+    //if the password meets the requirements  
+    function validatePassword() {
+        var password = document.getElementsByName('password1')[0].value;
+        var errorDiv = document.getElementById('passwordError');
+        var passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$/;
+    
+        if (passwordRegex.test(password)) {
+            errorDiv.innerHTML = '';
+            return true;
+        } else {
+            errorDiv.innerHTML = 'Password must contain at least 6 characters, including uppercase, lowercase, number and special character.';
+            return false;
+        }
+    }   
+    
+    //if the two passwords match
+    function validatePasswordMatch() {
+        var password1 = document.getElementsByName('password1')[0].value;
+        var password2 = document.getElementsByName('password2')[0].value;
+        var errorDiv = document.getElementById('passwordError');
+    
+        if (password1 === password2) {
+            errorDiv.innerHTML = '';
+            return true;
+        } else {
+            errorDiv.innerHTML = 'Passwords do not match.';
+            return false;
+        }
+    }
+
+    //To prevent the form from being submitted when the passwords do not match or do not meet the requirements
+    document.getElementsByClassName('login-form')[0].onsubmit = function(event) {
+        if (!validatePassword() || !validatePasswordMatch()) {
+            event.preventDefault();
+        }
+    };
+    
+    
+</script>
 </body>
 </html>
