--- a/RaisingMinds/school_profile/templates/school_profile/school_registration.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_registration.html
@@ -22,67 +22,7 @@
 {% comment %} </head> {% endcomment %}
 
 {% comment %} <body> {% endcomment %}
-  <!-- nav bar -->
-  {% comment %} <nav class="navbar navbar-expand-lg navbar-dark bg-dark  fixed-top padding">
-    <div class="container Inpadding ">
-      <!-- Logo -->
-      <div class="fixedLogo">
-        <a href="#">
-          <div class="logo" class="h-8 size bg-dark">Raising Minds</div>
-        </a>
-      </div>
-      <!-- Navbar toggle -->
-      <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- Collapse -->
-      <div class="collapse navbar-collapse backGround" id="navbarCollapse">
-        <!-- Nav -->
-        <div class="navbar-nav mx-lg-auto">
-          <a class="nav-item nav-link " href="#">Home</a>
-          <a class="nav-item nav-link " href="#">About</a>
-          <a class="nav-item nav-link " href="#">Projects</a>
-          <a class="nav-item nav-link" href="#">Team</a>
-          <a class="nav-item nav-link" href="#">Contact</a>
-          <a class="nav-item nav-link " href="#">Community</a>
-          <!-- dropdown -->
-          <div id="dropdown" class="img ">
-            <ul class="navbar-nav mb-2 mb-lg-0 ">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  <img src="/images/profile_icon.jpeg" alt="Profile pictre">
-                </a>
-                <ul class="dropdown-menu ">
-                  <li><a class="dropdown-item" href="#"><i class="fas fa-sliders-h fa-fw"></i> Account Settings</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#"><i class="fas fa-cog fa-fw"></i> Create School Profile</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-fw"></i> Log Out</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-
-
-        </div>
-
-        <!-- Donate button -->
-        <div class="d-flex align-items-lg-center mt-3 mt-lg-0 disabled">
-          <a href="#" class="btn btnDonate-style btn-sm btn-primary w-full w-lg-auto custom-btn">
-            Donate
-          </a>
-
-        </div>
-      </div>
-  </nav> {% endcomment %}
-  <!--------------------------END nav bar-------------------------------------->
-
+ 
 {% block content %}
  
   <br><br><br><br>
@@ -158,7 +98,7 @@
           <div class="row">
 
             <div class="form-group mb-2 col Vdoc">
-              <label for="File1"> Verification document : <a href="{% static 'school_profile/css/school_registration_form.css' %}" download>Download template</a></label>
+              <label for="File1"> Verification document : <a href="{% static 'school_profile/verification/School Verification Document.pdf' %}"  target="_blank">Download template</a></label>
 
                <!--  link with  modal -->
              <button type="button" id="btn-agreement" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -274,10 +214,7 @@
   <br><br>
   <script src="{% static 'school_profile/js/school_registration.js'%}"></script>
 
-  <!-- bootstrap javascript link -->
-  {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script> {% endcomment %}
+
 
 {% endblock %}
 
