--- a/RaisingMinds/user_profile/templates/user_profile/user_profile.html
+++ b/RaisingMinds/user_profile/templates/user_profile/user_profile.html
@@ -49,7 +49,7 @@
             <button type="reset" class="btn btn-primary "> &nbspReset&nbsp </button>
             
           </form>
-          <a href="#">
+          <a href="{% url "deleteprofile" %}">
             <button class="btn btn-danger ms-3 mb-3" type="button">Delete Account</button>
           </a>
           
