--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -532,11 +532,11 @@
                 <div class="col-lg-2 col-md-6 footer-links">
                   <h4>Useful Links</h4>
                   <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="{% url 'index' %}">Home</a></li>
+                    <li><a href="{% url 'index' %}#about">About</a></li>
+                    <li><a href="{% url 'projects' %}">Projects</a></li>
+                    <li><a href="{% url 'index' %}#team">Team</a></li>
+                    <li><a href="{% url 'index' %}#contact">Contact</a></li>
                   </ul>
                 </div>
 
@@ -553,8 +553,10 @@
                 <div class="col-lg-4 col-md-6 footer-newsletter">
                   <h4>Join Our Newsletter</h4>
                   <p>Stay connected with our mission and be the first to know about upcoming projects, events, and opportunities to make a difference</p>
-                  <form action="" method="post">
-                    <input type="email" name="email"><input type="submit" value="Subscribe">
+                  <form>
+                    <input type="email" name="email" placeholder="email address"> 
+                    <button type="button" onclick="window.location.href=' {% url 'projects' %}'">Subscribe</button>
+            
                   </form>
                 </div>
 
