--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -545,8 +545,8 @@
                   <ul>
                     <li><a href="#">Create School Profile</a></li>
                     <li><a href="#">Create Post</a></li>
-                    <li><a href="#">Terms of service</a></li>
-                    <li><a href="#">Privacy policy</a></li>
+                    <li><a href="{% url "error404" %}">Terms of service</a></li>
+                    <li><a href="{% url "error404" %}">Privacy policy</a></li>
                   </ul>
                 </div>
 
@@ -555,7 +555,7 @@
                   <p>Stay connected with our mission and be the first to know about upcoming projects, events, and opportunities to make a difference</p>
                   <form>
                     <input type="email" name="email" placeholder="email address"> 
-                    <button type="button" onclick="window.location.href=' {% url 'projects' %}'">Subscribe</button>
+                    <button type="button" onclick="window.location.href=' {% url 'error404' %}'">Subscribe</button>
             
                   </form>
                 </div>
