--- a/RaisingMinds/users/templates/users/login.html
+++ b/RaisingMinds/users/templates/users/login.html
@@ -60,12 +60,17 @@
               <span class="fa fa-user"></span>
             </div>
             <h3 class="text-center mb-4">Log In</h3>
-            <!-------------------alert box password invalid----------------------------------------------->
+            
+            {% if messages %}
+            {% for message in messages %}
             <div class="alert alert-warning alert-dismissible fade show bg-danger text-white" role="alert">
-              <strong  >Holy guacamole!</strong> You should check in on some of those fields below.
+              {{message}}
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-             <!-------------------end alert box password invalid-------------------------------------------->
+            {% endfor %}
+            {% endif %}
+
+            
             <form action="#" class="login-form" method="post">
             {% csrf_token %}
               <div class="form-group">
