--- a/RaisingMinds/post/templates/post/community.html
+++ b/RaisingMinds/post/templates/post/community.html
@@ -23,7 +23,7 @@
                 <div class="main ">
                     <!-- start fist post -->
 
-                {% for post in posts %}
+                {% for post in posts reversed %}
                     {% if post.is_approved %}
                     <!--  post-author -->
                     <div class="post1 mb-3" style="border-radius: 2%;">
