--- a/RaisingMinds/app/templates/app/error404.html
+++ b/RaisingMinds/app/templates/app/error404.html
@@ -20,7 +20,7 @@
         <div class="d-flex align-items-center justify-content-center vh-100">
             <div class="text-center">
                 <h1 class="display-1 fw-bold">404</h1>
-                <p class="fs-3 fa-fade"> <span  style="color: red; font-weight: 500;">Opps!</span> Page not found.</p>
+                <p class="fs-3 fa-fade"> <span  style="color: red; font-weight: 500;">Oops!</span> Page not found.</p>
                 <p class="fs-6">
                 The page you’re looking for doesn’t exist.
                 </p>
